@@ -1,4 +1,4 @@
-$Id: History,v 1.15 2000-11-08 00:47:20 kurasige Exp $
+$Id: History,v 1.16 2001-03-12 06:39:21 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+- Mar. 12, 01  H.Kurashige (procman-V03-00-00)
+- Modify Store/RetrievePhysicsTable methods 
+  (add a bool argument to specify ascii/binary mode)  
+
 - Nov 08, 00    H.Kurashige (procman-V02-00-01)
 - Added  Store/RetrievePhysicsTable (virtual) methods
 
